examples/datalog/18_advanced_patterns/91_count_by_category.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_cat
Knowledge graph 'test_count_cat' created.
Switched to knowledge graph: test_count_cat
> .kg use test_count_cat
Switched to knowledge graph: test_count_cat
> +items[(1, "A"), (2, "B"), (3, "A"), (4, "A"), (5, "B"), (6, "C")].
Inserted 6 fact(s) into 'items'.
> count_per_cat(Cat, <COUNT:Id>) :- items(Id, Cat).
Script error: Parse error: Unknown aggregate function: 
