examples/datalog/18_advanced_patterns/91_count_by_category.dl
% Test: Count by category pattern
% Expected: Count per category
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_count_cat
.kg use test_count_cat

+items[(1, "A"), (2, "B"), (3, "A"), (4, "A"), (5, "B"), (6, "C")].

% Count per category
count_per_cat(Cat, <COUNT:Id>) :- items(Id, Cat).

?- count_per_cat(Cat, N).

.kg use default
.kg drop test_count_cat
